clang/test/BSC/Negative/Ownership/RuleCheck/generic_owned_struct/generic_owned_struct.cbs
// %RUN: %clang_cc1 -verify %s

#define NULL ((void *)0)

_Safe T* _Owned safe_malloc<T>(T);
_Safe void safe_free(void* _Owned);

struct U { 
  int a;
  int* _Owned b;
};

struct M {
  int* p;
  int* q;
};

_Owned struct S<T> {
_Public:
  T *_Owned a;
  ~S(S<T> this) {
    if(this.a == NULL) {
    return;
    }
    safe_free((void* _Owned)this.a); // expected-error {{invalid cast to `void * _Owned` of not all moved value: `this.a`, this.a.b is _Owned}}
  }   
};
int main() {
  int a = 6;
  S<int> s = { safe_malloc(a) };
  struct U u = { .a = 1, .b = safe_malloc(1) };
  S<struct U> su = { safe_malloc(u) };
  struct M m = { .p = NULL, .q = NULL };
  S<struct M> sm = { safe_malloc(m) };
  return 0;
}